2011-01-16  Robert Hogan  <robert@webkit.org>

Reviewed by Andreas Kling.

        [Qt] plugins/keyboard-events.html fails after r72717
        https://bugs.webkit.org/show_bug.cgi?id=50050

        * platform/qt/Skipped: Unskip plugins/keyboard-events.html
2011-01-16  Robert Hogan  <robert@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] plugins/keyboard-events.html fails after r72717
        https://bugs.webkit.org/show_bug.cgi?id=50050

        * plugins/qt/PluginViewQt.cpp:
        (WebCore::setXKeyEventSpecificFields): map event text to keycode

Canonical link: https://commits.webkit.org/66146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75894 268f45cc-cd09-0410-ab3c-d52691b4dbfc